--- a/vue/.env.production
+++ b/vue/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV = 'production'
 VUE_APP_MODE = 'production'
-VUE_APP_URL = 'http://47.108.170.198:8080'
+# VUE_APP_URL = 'http://server_url:8080'
